# data-validation-tool

./: .gitignore  README.md  USER_GUIDE.md  athena_client.py  cli.py  config.py  data_validator.py  github_schema_fetcher.py  llm_sql_generator.py  pyproject.toml  requirements.txt  setup_aws.py  sql_cache_manager.py  validation_rules.py
