[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-validation"
version = "0.1.0"
description = "AWS Athena-based data validation: single-table profiling and migration table comparison"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Your Team", email = "team@example.com"}
]
keywords = ["data validation", "athena", "aws", "etl", "migration", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "boto3>=1.34.0",
  "pandas>=2.1.4",
  "click>=8.1.7",
  "tabulate>=0.9.0",
  "python-dotenv>=1.0.0",
  "pydantic-settings>=2.0.0",
  "rich>=13.7.0",
  "requests>=2.31.0"
]

# Keep using the current flat module layout
# (no package directory required). List modules explicitly.
[tool.setuptools]
py-modules = [
  "athena_client",
  "cli",
  "config",
  "data_validator",
  "github_schema_fetcher",
  "llm_sql_generator",
  "sql_cache_manager",
  "setup_aws",
  "validation_rules"
]

[project.scripts]
# Expose the click group as an executable
data-validate = "cli:cli" 